--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="banner">
         <div class="banner-video">
           <video autoplay loop muted>
-            <source src="/docs/vinyl.mp4" type="video/mp4">
+            <source src="./docs/vinyl.mp4" type="video/mp4">
           </video>
         </div>
         <div class="banner-text">
@@ -40,7 +40,7 @@ My passion to the website designer has started long time ago when I was young. I
 
 
 <section class="pics">
-    <img src="/docs/bueno.jpg" alt="bueno">
+    <img src="./docs/bueno.jpg" alt="bueno">
     <h4 style="display:inline-block"> EXPERIENCE: </h4> <br>
     <p style="display:inline-block" class="experience"> 
     I have completed a vocational degree in business administration and graduated in 2015. <br>
@@ -84,7 +84,7 @@ My passion to the website designer has started long time ago when I was young. I
 
 
 <div class="container">
-  <img src="/docs/darks.jpg" alt="darks" class="darks">
+  <img src="./docs/darks.jpg" alt="darks" class="darks">
   <div class="text-overlay">
 
 <!--EDUCATION-->
